# DeepBAM

./: README.md
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/Call_Modification/: Call_Modification.cpp  Call_Modification.h
cpp/DataLoader/: Pod5Data.cpp  Pod5Data.h  Reference_Reader.cpp  Reference_Reader.h  SamRead.cpp  SamRead.h
cpp/Data_Filter/: Data_Filter.cpp  Data_Filter.h
cpp/Feature_Extractor/: Feature_Extractor.cpp  Feature_Extractor.h
cpp/Python_Script/: Calculate_Pearson_Correlation_Coefficient.py
cpp/utils/: utils_func.cpp  utils_func.h  utils_thread.cpp  utils_thread.h
py/: README.md  combine.py  dataloader.py  extract_and_call_mods.sh  extract_hc_sites.sh  extract_kmer.py  merge_npz.py  model.py  train_lstm.py  train_lstm_async.py
py/analyses_scripts/: CpGDistanceCorrelation.py  F1_AUC.py  ROC_AUC_Curve_Bar.py  detail_aggregation.py  detail_dict.py  downSample.sh  validation.sh
supplementaryResult/: supplementaryTable7.xlsx
